05_Argo_Rollouts_Istio/istio_canary/apiv1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiv1-deploy
  labels:
    name: apiv1-deploy
    app: api
  namespace: api
spec:
  replicas: 3
  selector:
    matchLabels:
      name: apiv1-po
      app: api
  template:
    metadata:
      name: apiv1-po
      labels:
        name: apiv1-po
        app: api
    spec:
      containers:
      - name: apiv1-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: apiv1-svc
  labels:
    name: apiv1-svc
    app: api
  namespace: api
spec:
  selector:
    name: apiv1-po
    app: api
  ports:
  - port: 3000
    targetPort: 3000
